k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP # internal only — never expose DB to internet
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
