k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
spec:
  type: ClusterIP
  selector:
    app: cloud-app
  ports:
    - port: 80
      targetPort: 8080
