k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-app
  annotations:
    # Tell Traefik to use both HTTP and HTTPS entrypoints
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # Auto-redirect HTTP to HTTPS
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Use cert-manager to obtain the certificate
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Reference the middleware for HTTP to HTTPS redirection
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.d15hub.com
      secretName: cloud-app-tls # cert-manager will create this Secret
  rules:
    - host: app.d15hub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-app
                port:
                  number: 80
